# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.648 2006/07/20 22:02:16 wolf31o2 Exp $

  20 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/chroot-functions.sh:
  Fix --fetchonly to actually work.

  19 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  examples/livecd-stage2_template.spec:
  Added description for livecd/fsops to livecd-stage2's spec template.

  19 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/livecdfs-update.sh:
  I've modified the GDM configuration section to work correctly. I have also
  ensured that xdm is no longer started just because livecd/xdm is used, which
  was causing issues for the generic-livecd type. This is 2.0_rc50, which
  should be the last of the 'release candidates' made. If there are no bug
  reports in 2 days, then I'm rolling this as 2.0 final.

  12 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Hopefully, I have fixed the issue with the Installer icons. We'll have to
  see once the newer Installer is released, as I still have to fix the
  installer scripts.

  12 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/rc-update.sh:
  Removed famd from the default runlevel for gentoo-release-livecd. It really
  shouldn't cause a problem, but I prefer it stay a bit clean.

  11 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org> 
  modules/generic_stage_target.py, targets/support/bootloader-setup.sh,
  targets/support/create-iso.sh, targets/support/kmerge.sh,
  targets/support/livecdfs-update.sh, targets/support/mips-arcload_conf.sh:
  Added patches from Joshua Kinard <kumba@gentoo.org> from bug #139337.

  05 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  -livecd/cdtar/silo-1.2.6-sparc-cdtar.tar.bz2,
  +livecd/cdtar/silo-1.4.13-sparc-cdtar.tar.bz2,
  targets/support/bootloader-setup.sh: